--- a/public/index.html
+++ b/public/index.html
@@ -16,11 +16,13 @@
     <meta property="fb:app_id" content="475289669332579">
     <meta name="twitter:title" content="RPS Battle">
     <meta name="twitter:description" content="RPS Battle">
+    <link rel="icon" type="image/png" href="favicon.png" />
+
     <meta name="twitter:image:src" content="http://test.streamkar.tv/streamkar/BBallThrill122k23/img/B-ball-header.13c15e2d2dc0aac818ca.jpg">
   
     <title>RPS Battle</title>
   
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.png" />
    
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> 
   
